fixed updateWaterService
